Almost completed input boxes, working on fixing overflow issues

--- a/src/app/builder/components/charts/TransformChart.less
+++ b/src/app/builder/components/charts/TransformChart.less
@@ -17,7 +17,7 @@
       margin-left: 2px;
       font-size: 12px;
       height: 14px;
-      width: 57px;
+      width: 58px;
       background-color: #c6ebf0;
       color: #14849f;
     }
